--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Персональная веб-страница</title>
     <link rel="stylesheet" href="style.css">
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 </head>
 
 <body style="background: rgb(186, 153, 229);">
@@ -106,7 +107,11 @@
                         </table>
                 </div>
         </div>
-
+        <script>
+            $( function() {
+              $( "#tabs" ).tabs();
+            } );
+        </script>
         <hr>
 
         <hr>
@@ -116,7 +121,13 @@
         <hr>
         <div id="scrollTop">Вернуться в&nbsp;начало<img src="Fotodlasayta/srt-red.png" alt="стрелочка вверх"
                     width="100"></div>
-
+        <script>
+            $('#scrollTop').click(
+                function(){
+                    $("html,body").animate({scrollTop:0}, 800);
+                }
+            );
+        </script>
         <hr>
         <h3 class="center">Расскажите мне о себе</h3>
         <div class="N2">
@@ -159,7 +170,13 @@
 
 <p>- пупочка – нечто очень маленькое, дорогое и приятное.</p>
 </div>
-
+<script>
+    $('#words').find('p').click(
+        function(){
+            $(this).addClass('bigText');
+        }
+    );
+</script>
 <hr>
 <h3 class="center">Копатыч</h3>
 <div class="myguy">
@@ -278,11 +295,19 @@
 <hr>
 <div class="center">
 <button  id="growing">Страшная кнопка</button>
-
+<script>growing.onclick = function() {
+    this.style.fontSize = '100px';
+    this.style.color = 'red';
+    this.style.backgroundColor = 'black';};
+</script>
 </div>
 <div class="center">
 <button id="color">Добрая кнопка</button>
-
+<script>
+    color.onclick = function() {
+      this.style.backgroundColor = 'pink';
+    };
+</script>
 </div>
 <hr>
 <p class="center" id="mnm"> Расенган требует чрезвычайно точного 
@@ -313,6 +338,79 @@
 
 </div>
 
+<script>
+    $('img').click(
+        function() {
+            $( this ).toggleClass('rotated');
+        }
+    );
+</script>
+
+<div id="wrapper">
+    <button id="wrapButton">Капуста</button>
+    <button id="unwrapButton">Атсупак</button>
+</div>
+<script>
+    $('#wrapButton').click(
+        function(){
+            $('#wrapper').wrap('<div class="wrapDiv" />');
+            $('.wrapDiv').css('border', '10px solid green');
+        }
+    );
+    $('#unwrapButton').click(
+        function(){
+            $('#wrapper').unwrap();
+        }
+    );
+</script>
+
+
+
+<hr>
+<button id="hide1">Черный</button>
+<button id="hide2">Белый</button>
+<script>
+    $('#hide1').click(
+        function(){
+            $(this).hide();
+            $('#hide2').show();
+        }
+    );
+    $('#hide2').click(
+        function(){
+            $(this).hide();
+            $('#hide1').show();
+        }
+    );
+</script>
+<script>
+    $(document).ready(
+        function(){
+        $(document).find('img').filter(':first').draggable();
+        }
+    );
+</script>
+<hr>
+<div id="add">
+    <button id="appendButton">append</button>
+    <button id="prependButton">prepend</button>
+    <button id="deleteButton">Убрать лишние строки</button>
+</div>
+<script>
+    $('#appendButton').click(
+        function(){
+            $('#add').append('<span>Добавлен в конец</span>');
+        });
+    $('#prependButton').click(
+        function(){
+            $('#add').prepend('<span>Добавлен в начало</span>');
+        });
+    $('#deleteButton').click(
+        function(){
+            $('#add').find('span').detach();
+        }
+    );
+</script>
 
 
 
